add all chapters to config.yml; add Collatz example as appendix

--- a/episodes/070-pkg.md
+++ b/episodes/070-pkg.md
@@ -1,9 +1,11 @@
-
 ---
 title: Packages and environments
 ---
 
 ::: questions
+- How do I work with environments?
+- What are these `Project.toml` and `Manifest.toml` files?
+- How do I install more dependencies?
 :::
 
 ::: objectives
@@ -18,8 +20,10 @@ title: Packages and environments
 - pkg> activate @place
 :::
 
----
-
 ::: keypoints
+- Julia has a built-in package manager called `Pkg`.
+- The package manager is usually accessed from the REPL, by pressing `]`.
+- `Project.toml` lists the dependencies of a package.
+- `Manifest.toml` specifies a completely reproducible environment with exact versions.
 :::
 
