Add project and manifest contents to lesson material explicitly

--- a/episodes/070-pkg.md
+++ b/episodes/070-pkg.md
@@ -102,13 +102,41 @@ Looking in the previously empty `Dummy/` directory, you should now see the appea
 
 From the terminal, you can open these in your currently running vscode window using `code -r`:
 ```shell
-code -r Project.toml Manifest.toml
+code -r Project.toml
+```
+
+```output
+[deps]
+Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 ```
 
 Inspecting `Project.toml`, we see that it has a `[deps]` section, which stands for "dependencies". There is a single dependency, `Random`, along with a long string of letters and numbers. This is the Universally Unique Identifier (UUID) of the package. This will be covered in a later episode.
 
-Next, we inspect `Manifest.toml`. Initially, we see that it contains some information that is similar to the contents of `Project.toml`. We see the `Random` package we added earlier, and its UUID, but
-now also a specific version for that package.
+Next, we inspect `Manifest.toml`.
+
+```shell
+code -r Manifest.toml
+```
+
+```output
+# This file is machine-generated - editing it directly is not advised
+
+julia_version = "1.11.3"
+manifest_format = "2.0"
+project_hash = "fa3e19418881bf344f5796e1504923a7c80ab1ed"
+
+[[deps.Random]]
+deps = ["SHA"]
+uuid = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
+version = "1.11.0"
+
+[[deps.SHA]]
+uuid = "ea8e919c-243c-51af-8825-aaa63cd721ce"
+version = "0.7.0"
+```
+
+Initially, we see that it contains some information that is similar to the contents of `Project.toml`. We see the `Random` package we added earlier, and its UUID, but
+now also a specific version for that package. We also a dependency of the `Random` package itself.
 
 So both `Project.toml` and `Manifest.toml` appear to specify the dependencies of the project. Generally speaking, dependencies may have many versions which may be acceptable (compatible). `Project.toml` gives the requirements of the project on a comparatively high-level, whereas `Manifest.toml` specifies exact versions for each dependency, as well as a hash of the entire project. Therefore, `Manifest.toml` specifies a particular working installation of the package. For most projects, many `Manifest.toml` configurations could be possible.
 
