Add an exercise and some info about activating @ envs

--- a/episodes/070-pkg.md
+++ b/episodes/070-pkg.md
@@ -157,6 +157,41 @@ If we check `pkg> status` again, we see that we have returned to the "(empty pro
 pkg> status
 ```
 
+:::challenge
+#### Add and remove the Dates package (3 min)
+
+There is a `Dates` standard Julia package. Try adding this as a dependency, then check `Project.toml` and `Manifest.toml` to see what has changed.
+
+Then remove the `Dates` dependency when you are done.
+
+::::solution
+```shell
+pkg> add Dates
+pkg> status
+pkg> code -r Project.toml Manifest.toml
+pkg> remove Dates
+```
+::::
+:::
+
+
+
+
+### Activating the default environment again
+
+Sometimes you may wish to return to using the default environment for your Julia version.
+
+If your version is e.g. `1.11` then the command would look like:
+```shell
+pkg> activate @v1.11
+```
+
+:::callout
+Note the `@` symbol before the environment name. This tells us that it is a "shared" environment. That means it can be loaded by name (i.e. without specifying the path to the `Project.toml` file explicitly. You can make your own shared environments for various reasons but that is beyond the scope of the present lesson.
+:::
+
+You can also simply type `activate` with no arguments and Julia will also return to the default environment.
+
 
 ### Temporary environments
 
@@ -189,9 +224,20 @@ code -r Project.toml
 We see that this is empty (no dependencies), confirming that the project has not been affected by changes made to the temp environment.
 
 
+
 ### Using another project
 
-In the case where you have received only a `Project.toml` and `Manifest.toml` file but have not yet installed any dependencies (perhaps because someone has shared their code with you), you can use the `pkg> instantiate` command to install exactly the packages specified in the `Manifest.toml`. This is because using `pkg> activate` will not automatically fetch missing dependencies for you. `pkg> instantiate` will not do anything if you already have everything you need, so it is safe to use.
+Simply activating a project does not actually make Julia download and install any dependencies that may be listed in `Project.toml` (and `Manifest.toml`) but are missing on your machine.
+
+You may have this sitation if someone you are developing with has added a new dependency to the package, or shared their `Manifest.toml` with you.
+
+In such a case, you can make Julia fetch and install any dependencies you need using the `pkg> instantiate` command, to install exactly the packages specified in the `Manifest.toml`.
+
+```shell
+pkg> instantiate
+```
+
+`pkg> instantiate` will not do anything if you already have everything you need, so it is safe to use.
 
 
 ::: keypoints
