--- a/episodes/070-pkg.md
+++ b/episodes/070-pkg.md
@@ -56,7 +56,7 @@ Status `~/.julia/environments/v1.11/Project.toml`
 
 This shows the path to the current environment definition, which is in a file called `Project.toml` (we will discuss this later). From the path we see that this is the default environment for our version of Julia (in the above case, `v1.11`). This is the environment that will be used unless the user specifies a different one.
 
-In practice, we generally make specific environments for specific projects. This avoids issues of multiple/clashing versions of dependencies, removes unused dependencies (keeping the project environemtn clean) and allows you to easily publish your project as a package, if desired.
+In practice, we generally make specific environments for specific projects. This avoids issues of multiple/clashing versions of dependencies, removes unused dependencies (keeping the project environment clean) and allows you to easily publish your project as a package, if desired.
 
 Therefore, let us indicate to Julia that we wish to use an environment for our `Dummy` project. We do this using the `pkg> activate` command:
 
@@ -203,7 +203,7 @@ You can do this using `pkg> activate --temp`:
 pkg> activate --temp
 ```
 
-This will output something like `Activating new project at `/tmp/jl_4xvh88`.
+This will output something like `Activating new project at /tmp/jl_4xvh88`.
 
 You can now work with this as with any other environment, but without the fear that changes you make are messing up the `Project.toml` of the project you are working on.
 
